[gd_scene load_steps=8 format=2]

[ext_resource path="res://recursos/Environment/ground_cake_broken.png" type="Texture" id=1]
[ext_resource path="res://recursos/Environment/grass_brown2.png" type="Texture" id=2]
[ext_resource path="res://juego/Objetos/PlataformaTrampa.gd" type="Script" id=3]
[ext_resource path="res://SFX/Plataforma_rota.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 115.721, 23.4792 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( -0.994957, -1.17688 )
b = Vector2( 230.316, -0.892109 )

[sub_resource type="Animation" id=3]
resource_name = "caer"
tracks/0/type = "value"
tracks/0/path = NodePath("PlataformaRota:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -8, 0 ), Vector2( 8, 0 ), Vector2( -9, 0 ), Vector2( -6, 0 ), Vector2( 9, 0 ), Vector2( 6, 0 ), Vector2( -7, 0 ), Vector2( 7, 0 ), Vector2( 0, 300 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "desabilitar_colisionador"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("Ruidito_Sospechoso")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[node name="PlataformaTrampa" type="StaticBody2D"]
z_index = 40
z_as_relative = false
collision_layer = 4
collision_mask = 10
script = ExtResource( 3 )

[node name="PlataformaRota" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="Pastitoloco" type="Sprite" parent="PlataformaRota"]
position = Vector2( 123.296, -81.643 )
z_index = 39
z_as_relative = false
texture = ExtResource( 2 )

[node name="Colisionador" type="CollisionShape2D" parent="."]
position = Vector2( -0.237072, -2.06123 )
shape = SubResource( 1 )

[node name="Detector_personaje" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Colision_Suelo" type="CollisionShape2D" parent="Detector_personaje"]
position = Vector2( -115.307, -25.9999 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/caer = SubResource( 3 )

[node name="Ruidito_Sospechoso" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="Detector_personaje" to="." method="_on_body_entered"]
